@@ -64,3 +64,6 @@ a.direct {
 	.aicon.imgly {
 		background: transparent url('/img/services/imgly.png') no-repeat 50% 50%;
 		}
+	.aicon.imgur {
+		background: transparent url('/img/services/imgur.png') no-repeat 50% 50%;
+		}
