@@ -1,5 +1,9 @@
 0.40 (in development):
 	* Better links handling with middle mouse key or with Meta key pressed in OS X
+	+ Support for image preview for services:
+	  - imgur.com
+	  - yfrog.com
+	  - img.ly
 
 0.39:
 	* Fixed bug with back button on profile page after some action with confirmation (#78)
